syntax = "proto3";

package pspd;

message HelloRequest { string name = 1; }
message HelloReply { string message = 1; }

service ServiceA {
  rpc SayHello(HelloRequest) returns (HelloReply);
}

message StreamRequest { int32 count = 1; int32 delay_ms = 2; }
message NumberReply { int32 value = 1; }

service ServiceB {
  rpc StreamNumbers(StreamRequest) returns (stream NumberReply);
}
